[gd_scene load_steps=7 format=3 uid="uid://chn7nvwnulve"]

[ext_resource type="Script" path="res://UI/item_checkout_container.gd" id="1_ann7k"]
[ext_resource type="Texture2D" uid="uid://k0vhp18yjf7o" path="res://Asset/ShopItem/Bread.png" id="2_xpuij"]
[ext_resource type="Theme" uid="uid://cyx5vjugx1lim" path="res://Theme/our_theme.tres" id="3_8kncw"]
[ext_resource type="Texture2D" uid="uid://df160aemdaqim" path="res://Asset/UI/ui_value_gold.png" id="4_vckuu"]
[ext_resource type="Texture2D" uid="uid://bwkmwhg7gn8yi" path="res://Asset/UI/ui_value_silver.png" id="5_sh2us"]
[ext_resource type="Texture2D" uid="uid://di0q3sninmdyc" path="res://Asset/UI/ui_value_copper.png" id="6_svtet"]

[node name="ItemCheckoutContainer" type="MarginContainer"]
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_ann7k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ItemIconLabel" type="TextureRect" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_xpuij")
expand_mode = 1
stretch_mode = 5

[node name="ItemAmountLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_8kncw")
theme_override_font_sizes/font_size = 32
text = "10x
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueGrid" type="GridContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
columns = 2

[node name="GoldIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_vckuu")
stretch_mode = 5

[node name="GoldValueLabel" type="Label" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SilverIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("5_sh2us")
stretch_mode = 5

[node name="SilverValueLabel" type="Label" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopperIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_svtet")
stretch_mode = 5

[node name="CopperValueLabel" type="Label" parent="MarginContainer/HBoxContainer/ValueGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.156863, 0.196078, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Delete" type="Button" parent="."]
layout_mode = 2

[connection signal="button_down" from="Delete" to="." method="_on_delete_button_down"]
